# synfilesharing

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh
examples/: client.cpp  main.cpp  server.cpp
include/synfilesharing/: constants.h  synfilesharing.h  synfs.h
include/synfilesharing/builders/: client_builder.h  server_builder.h
include/synfilesharing/implementations/: client.h  server.h
include/synfilesharing/interfaces/: i_client.h  i_server.h
libs/sdbus-cpp/docs/: systemd-dbus-config.md  using-sdbus-c++.md
libs/sdbus-cpp/src/: Proxy.cpp  Proxy.h  ScopeGuard.h
libs/sdbus-cpp/tools/xml2cpp-codegen/: AdaptorGenerator.cpp  ProxyGenerator.cpp
src/: synfilesharing.cpp  synfs.cpp
src/builders/: client_builder.cpp  server_builder.cpp
src/implementations/: client.cpp  server.cpp
